--- a/src/Copyright/Copyright.scss
+++ b/src/Copyright/Copyright.scss
@@ -3,27 +3,28 @@
 .copyright {
 	display: block;
 	width: 100%;
+	text-align: center;
 	pre {
 		display: inline;
 	}
 	.text-left, .text-right {
 		display: inline-block;
 		vertical-align: top;
-		width: 50%;
 		padding-top: 15px;
 		padding-bottom: 15px;
 		color: white;
 		text-shadow: 0px 1px 2px black;
 		@media only screen and (max-width: $app-screen-xsm) {
 			display: block;
-			width: 100%;
 		}
 	}
 	.text-left {
 		text-align: right;
+		padding-right: 5px;
 		@media only screen and (max-width: $app-screen-xsm) {
 			text-align: center;
 			padding-bottom: 5px;
+			padding-right: 0;
 		}
 		.heart {
 			color: red;
@@ -38,9 +39,11 @@
 	}
 	.text-right {
 		text-align: left;
+		padding-left: 5px;
 		@media only screen and (max-width: $app-screen-xsm) {
 			text-align: center;
 			padding-top: 5px;
+			padding-left: 0;
 		}
 	}
 }
