--- a/src/Cover/Cover.scss
+++ b/src/Cover/Cover.scss
@@ -17,13 +17,105 @@
 		width: 100%;
 		height: 100%;
 		display: flex;
+		justify-content: center;
 		align-items: center;
 		background: url(../assets/pierres_ornement_berealmineral.jpg) center center no-repeat;
 		background-size: cover;
+		flex-direction: column;
 		.box {
 			display: block;
 			width: 100%;
 			height: 350px;
+			background: rgba(0, 0, 0, 0.5);
+			.left, .right {
+				display: inline-block;
+				vertical-align: top;
+				height: 100%;
+				overflow: hidden;
+			}
+			.left {
+				width: 65%;
+				box-shadow: 0px 0px 3px red inset;
+				text-align: center;
+				@media only screen and (max-width: $app-screen-sm) {
+					width: 100%;
+				}
+				.title {
+					text-align: left;
+					padding: 20px;
+					color: white;
+					text-shadow: 0px 1px 2px black;
+					@media only screen and (max-width: $app-screen-sm) {
+						text-align: center;
+					}
+				}
+				.separator {
+					display: block;
+					width: 50%;
+					height: 3px;
+					background: rgb(221, 0, 49);
+					box-shadow: 0px 1px 2px black;
+					margin-left: 20px;
+					@media only screen and (max-width: $app-screen-sm) {
+						margin: auto;
+					}
+				}
+				.text {
+					padding: 20px;
+					color: rgb(220, 220, 220);
+					text-shadow: 0px 1px 2px black;
+				}
+				.book {
+					display: inline-block;
+					padding: 20px;
+					padding-top: 10px;
+					padding-bottom: 10px;
+					color: rgb(220, 220, 220);
+					background: rgb(221, 0, 49);
+					border-radius: 10px;
+					box-shadow: 0px 1px 2px black;
+					&:hover {
+						color: white;
+						box-shadow: 0px 0px 5px white;	
+					}
+					&:active {
+						color: white;
+						box-shadow: 0px 0px 15px white;	
+					}
+				}
+			}
+			.right {
+				width: 35%;
+				box-shadow: 0px 0px 3px lime inset;
+				@media only screen and (max-width: $app-screen-sm) {
+					display: none;
+				}
+				.right-flex {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					width: 100%;
+					height: 100%;
+					.logo {
+						display: block;
+						width: 200px;
+						height: 200px;
+					}
+				}
+			}
+		}
+		.cpy {
+			padding-top: 20px;
+			color: white;
+			text-shadow: 0px 1px 2px black;
+			font-style: italic;
+			font-weight: bold;
+			@media only screen and (max-width: $app-screen-md) {
+				padding-top: 10px;
+			}
+			@media only screen and (max-width: $app-screen-sm) {
+				display: none;
+			}
 		}
 	}
 }
