--- a/src/Cover/Cover.scss
+++ b/src/Cover/Cover.scss
@@ -35,7 +35,6 @@
 			}
 			.left {
 				width: 65%;
-				box-shadow: 0px 0px 3px red inset;
 				text-align: center;
 				@media only screen and (max-width: $app-screen-sm) {
 					width: 100%;
@@ -83,10 +82,15 @@
 						box-shadow: 0px 0px 15px white;	
 					}
 				}
+				.social {
+					display: none;
+					@media only screen and (max-width: $app-screen-sm) {
+						display: block;
+					}
+				}
 			}
 			.right {
 				width: 35%;
-				box-shadow: 0px 0px 3px lime inset;
 				@media only screen and (max-width: $app-screen-sm) {
 					display: none;
 				}
