--- a/src/Contacts/Contacts.scss
+++ b/src/Contacts/Contacts.scss
@@ -104,8 +104,8 @@
 				display: inline-block;
 				color: white;
 				text-shadow: 0px 1px 2px black;
-				padding: 20px;
-				padding-bottom: 0;
+				padding: 0;
+				padding-left: 10px;
 				@media only screen and (max-width: $app-screen-sm) {
 					padding-bottom: 20px;
 				}
