--- a/src/Contacts/Contacts.scss
+++ b/src/Contacts/Contacts.scss
@@ -99,6 +99,12 @@
 			display: block;
 			.flag {
 				display: inline-block;
+				@media only screen and (max-width: $app-screen-sm) {
+					height: 23px;
+				}
+				@media only screen and (max-width: $app-screen-xsm) {
+					height: 17px;
+				}
 			}
 			.title {
 				display: inline-block;
@@ -133,6 +139,11 @@
 				text-shadow: 0px 1px 2px black;
 				text-align: center;
 			}
+		}
+	}
+	.right {
+		@media only screen and (max-width: $app-screen-sm) {
+			margin-top: 30px;
 		}
 	}
 }
