--- a/src/Minerals/Minerals.scss
+++ b/src/Minerals/Minerals.scss
@@ -14,11 +14,16 @@
 				display: inline-block;
 				vertical-align: top;
 				padding-top: 15px;
-				padding-bottom: 15px;
 				color: white;
 				text-shadow: 0px 1px 2px black;
 				padding-left: 20px;
-				padding-right: 20px;
+				padding-right: 10px;
+				@media only screen and (max-width: $app-screen-sm) {
+					padding-top: 20px;
+				}
+				@media only screen and (max-width: $app-screen-xsm) {
+					padding-left: 10px;
+				}
 			}
 			.select {
 				display: inline-block;
@@ -27,6 +32,15 @@
 				padding-top: 10px;
 				padding-bottom: 10px;
 				margin-top: 5px;
+				@media only screen and (max-width: $app-screen-sm) {
+					margin-top: 8px;
+				}
+				@media only screen and (max-width: $app-screen-xsm) {
+					margin-top: 9px;
+					padding: 10px;
+					padding-left: 5px;
+					padding-right: 5px;
+				}
 			}
 		}
 		.body {
