--- a/src/Minerals/Minerals.scss
+++ b/src/Minerals/Minerals.scss
@@ -8,6 +8,7 @@
 			display: block;
 			width: 100%;
 			height: 57px;
+			overflow: hidden;
 			background: rgb(8, 10, 33);
 			border-bottom: 1px rgb(0, 0, 0) solid;
 			.label {
